Add checks that preview features are enabled, does nothing for now