@@ -26,10 +26,10 @@
 * @summary Tests for jdk.internal.vm.Continuation preemption
 * @modules java.base/jdk.internal.vm
 *
-* @run testng/othervm/timeout=60 -Xlog:jvmcont+preempt=trace -Xint Preempt
-* @run testng/othervm -XX:-TieredCompilation -Xcomp -XX:CompileOnly=jdk/internal/vm/Continuation,Preempt Preempt
-* @run testng/othervm -XX:TieredStopAtLevel=3 -Xcomp -XX:CompileOnly=jdk/internal/vm/Continuation,Preempt Preempt
-* @run testng/othervm -Xlog:jvmcont+preempt=trace -XX:-UseTLAB -Xint Preempt
+* @run testng/othervm/timeout=60 --enable-preview -Xlog:jvmcont+preempt=trace -Xint Preempt
+* @run testng/othervm --enable-preview -XX:-TieredCompilation -Xcomp -XX:CompileOnly=jdk/internal/vm/Continuation,Preempt Preempt
+* @run testng/othervm --enable-preview -XX:TieredStopAtLevel=3 -Xcomp -XX:CompileOnly=jdk/internal/vm/Continuation,Preempt Preempt
+* @run testng/othervm --enable-preview -Xlog:jvmcont+preempt=trace -XX:-UseTLAB -Xint Preempt
 */
 
 // * @run testng/othervm -XX:+UnlockExperimentalVMOptions -XX:-TieredCompilation -XX:+UseJVMCICompiler -Xcomp -XX:CompileOnly=jdk/internal/vm/Continuation,Preempt Preempt
